syntax = "proto3";

package proto;

option go_package = "szuro.net/zms/pkg/proto";

// ValueType represents the different data types that Zabbix can collect and store.
enum ValueType {
  // FLOAT represents numeric floating-point values (Zabbix value type 0).
  FLOAT = 0;

  // CHARACTER represents character/string values (Zabbix value type 1).
  CHARACTER = 1;

  // LOG represents log file entries (Zabbix value type 2).
  LOG = 2;

  // UNSIGNED represents numeric unsigned integer values (Zabbix value type 3).
  UNSIGNED = 3;

  // TEXT represents text values (Zabbix value type 4).
  TEXT = 4;
}

// ExportType identifies the different types of Zabbix exports.
enum ExportType {
  // HISTORY identifies history data exports.
  HISTORY = 0;

  // TRENDS identifies trend data exports.
  TRENDS = 1;

  // EVENTS identifies event/problem exports.
  EVENTS = 2;
}

// EventValue indicates the event type (problem or recovery).
enum EventValue {
  // RECOVERY indicates a trigger went from PROBLEM to OK.
  RECOVERY = 0;

  // PROBLEM indicates a trigger went from OK to PROBLEM.
  PROBLEM = 1;
}

// Severity indicates the severity level of a problem or log entry.
enum Severity {
  // NOT_CLASSIFIED represents items with no specific severity.
  NOT_CLASSIFIED = 0;

  // INFORMATION represents informational items.
  INFORMATION = 1;

  // WARNING represents warning level items.
  WARNING = 2;

  // AVERAGE represents average severity items.
  AVERAGE = 3;

  // HIGH represents high severity items.
  HIGH = 4;

  // DISASTER represents disaster level items.
  DISASTER = 5;
}

// Host represents a Zabbix host with its technical name and display name.
message Host {
  // host is the technical host name used internally by Zabbix.
  string host = 1;

  // name is the visible/display name of the host as shown in Zabbix frontend.
  string name = 2;
}

// Tag represents a key-value pair tag associated with Zabbix items or problems.
// Tags are used for categorization, filtering, and metadata purposes.
message Tag {
  // tag is the tag name/key.
  string tag = 1;

  // value is the tag value.
  string value = 2;
}

// History represents a single Zabbix history record containing a collected item value.
// History records are created when Zabbix collects data from monitored items and
// contain the actual metric values along with metadata about when and where they were collected.
message History {
  // host contains the technical and display names of the host that owns this item.
  // May be null in some export configurations.
  Host host = 1;

  // itemid is the unique identifier of the Zabbix item.
  int64 itemid = 2;

  // name is the visible/display name of the item as shown in Zabbix frontend.
  string name = 3;

  // clock is the Unix timestamp (seconds since epoch) when the value was collected.
  // This represents the integer part of the collection time.
  int64 clock = 4;

  // groups contains the list of host groups that the item's host belongs to.
  repeated string groups = 5;

  // ns is the nanoseconds component to be added to clock for precise timing.
  // Together with clock, this provides nanosecond-precision timestamps.
  int64 ns = 6;

  // value contains the actual collected item value.
  // The interpretation depends on the value_type field:
  // - For numeric types (FLOAT, UNSIGNED): use numeric_value
  // - For text types (CHARACTER, TEXT, LOG): use string_value
  oneof value {
    double numeric_value = 7;
    string string_value = 8;
  }

  // tags contains the list of tags associated with this item.
  // Tags can be used for filtering and categorization.
  repeated Tag tags = 9;

  // value_type indicates the value type using Zabbix value type constants.
  ValueType value_type = 10;

  // Log-specific fields (only present when value_type == LOG):

  // timestamp is the original timestamp from the log entry (log items only).
  // Set to 0 if not available.
  int64 timestamp = 11;

  // source is the source of the log entry (log items only).
  // Empty string if not available.
  string source = 12;

  // severity represents the log entry severity level (log items only).
  Severity severity = 13;

  // eventid is the related event ID for log entries (log items only).
  // Set to 0 if not available.
  int64 eventid = 14;
}

// Trend represents aggregated hourly statistics for a Zabbix item.
// Trends are generated by Zabbix for numeric items to provide statistical summaries
// over time periods, reducing storage requirements while maintaining useful metrics.
message Trend {
  // host contains the technical and display names of the host that owns this item.
  // May be null in some export configurations.
  Host host = 1;

  // itemid is the unique identifier of the Zabbix item.
  int64 itemid = 2;

  // name is the visible/display name of the item as shown in Zabbix frontend.
  string name = 3;

  // clock is the Unix timestamp (seconds since epoch) representing the hour
  // for which these trend statistics were calculated.
  int64 clock = 4;

  // count is the number of individual values that were collected and
  // aggregated to calculate these trend statistics.
  int64 count = 5;

  // groups contains the list of host groups that the item's host belongs to.
  repeated string groups = 6;

  // min is the minimum value collected during this hour.
  double min = 7;

  // max is the maximum value collected during this hour.
  double max = 8;

  // avg is the average value calculated from all values collected during this hour.
  double avg = 9;

  // tags contains the list of tags associated with this item.
  // Tags can be used for filtering and categorization.
  repeated Tag tags = 10;

  // value_type indicates the original value type of the item.
  // Note: Only numeric types (FLOAT, UNSIGNED) have trend data generated.
  ValueType value_type = 11;
}

// Event represents a Zabbix problem or recovery event.
// Events are generated when triggers change state, either from OK to PROBLEM (problem events)
// or from PROBLEM to OK (recovery events). They contain information about what happened,
// when it occurred, and which hosts and groups were affected.
message Event {
  // clock is the Unix timestamp (seconds since epoch) when the problem was
  // detected or resolved. This represents the integer part of the event time.
  int64 clock = 1;

  // ns is the nanoseconds component to be added to clock for precise timing.
  // Together with clock, this provides nanosecond-precision timestamps.
  int64 ns = 2;

  // value indicates the event type.
  EventValue value = 3;

  // eventid is the unique identifier for this specific event.
  int64 eventid = 4;

  // p_eventid is the ID of the related problem event (for recovery events only).
  // This links recovery events back to their corresponding problem events.
  int64 p_eventid = 5;

  // name is the descriptive name of the problem (problem events only).
  // This is typically the trigger expression or a user-defined description.
  string name = 6;

  // severity indicates the severity level of the problem (problem events only).
  Severity severity = 7;

  // hosts contains the list of hosts involved in the trigger expression that
  // generated this event (problem events only).
  repeated Host hosts = 8;

  // groups contains the list of host groups for all hosts involved in this
  // event (problem events only).
  repeated string groups = 9;

  // tags contains the list of problem tags associated with this event
  // (problem events only). Tags can be used for filtering and categorization.
  repeated Tag tags = 10;
}

// SaveHistoryRequest is used to send history data to an observer plugin.
message SaveHistoryRequest {
  // history contains the list of history records to be saved.
  repeated History history = 1;
}

// SaveTrendsRequest is used to send trend data to an observer plugin.
message SaveTrendsRequest {
  // trends contains the list of trend records to be saved.
  repeated Trend trends = 1;
}

// SaveEventsRequest is used to send event data to an observer plugin.
message SaveEventsRequest {
  // events contains the list of event records to be saved.
  repeated Event events = 1;
}

// SaveResponse is returned by observer plugins after processing data.
message SaveResponse {
  // success indicates whether the save operation completed successfully.
  bool success = 1;

  // error contains the error message if success is false.
  string error = 2;

  // records_processed indicates how many records were successfully processed.
  int64 records_processed = 3;

  // records_failed indicates how many records failed to be processed.
  int64 records_failed = 4;
}

// InitializeRequest is sent to initialize an observer plugin.
message InitializeRequest {
  // name is the name of the target/observer.
  string name = 1;

  // connection contains the connection string for the target.
  string connection = 2;

  // options contains key-value configuration options for the plugin.
  map<string, string> options = 3;

  // exports indicates which export types are enabled for this observer.
  repeated ExportType exports = 4;

  // filter contains the filter configuration for this observer.
  Filter filter = 5;
}

// PluginInfo contains metadata about the plugin.
message PluginInfo {
  // name is the plugin name.
  string name = 1;

  // version is the plugin version.
  string version = 2;

  // description is a brief description of the plugin.
  string description = 3;

  // author is the plugin author/maintainer.
  string author = 4;
}

// InitializeResponse is returned after initializing an observer plugin.
message InitializeResponse {
  // success indicates whether initialization completed successfully.
  bool success = 1;

  // error contains the error message if success is false.
  string error = 2;

  // plugin_info contains metadata about the plugin.
  PluginInfo plugin_info = 3;
}

// FilterType represents the type of filter to apply.
enum FilterType {
  // TAG filters based on item/event tags.
  TAG = 0;

  // GROUP filters based on host groups.
  GROUP = 1;

  // CUSTOM filters based on custom criteria (not implemented).
  CUSTOM = 69;
}

// Filter represents a single filter configuration with accept/reject patterns.
message Filter {
  // type indicates the filter type (tag, group or custom).
  FilterType type = 1;

  // accepted contains patterns that should be accepted.
  // For TAG filters: "tag_name:tag_value_pattern"
  // For GROUP filters: "group_name_pattern"
  repeated string accepted = 2;

  // rejected contains patterns that should be rejected.
  // For TAG filters: "tag_name:tag_value_pattern"
  // For GROUP filters: "group_name_pattern"
  repeated string rejected = 3;
}


// CleanupRequest is sent to request cleanup of observer resources.
message CleanupRequest {
  // No parameters needed for cleanup.
}

// CleanupResponse is returned after cleanup completes.
message CleanupResponse {
  // success indicates whether cleanup completed successfully.
  bool success = 1;

  // error contains the error message if success is false.
  string error = 2;
}

// ObserverService defines the gRPC service interface for observer plugins.
service ObserverService {
  // Initialize configures the observer with connection and filter settings.
  rpc Initialize(InitializeRequest) returns (InitializeResponse);

  // SaveHistory processes history data.
  rpc SaveHistory(SaveHistoryRequest) returns (SaveResponse);

  // SaveTrends processes trend data.
  rpc SaveTrends(SaveTrendsRequest) returns (SaveResponse);

  // SaveEvents processes event data.
  rpc SaveEvents(SaveEventsRequest) returns (SaveResponse);

  // Cleanup performs cleanup of observer resources.
  rpc Cleanup(CleanupRequest) returns (CleanupResponse);
}
